Name: Sirea
Version: 0.1
Cabal-Version: >= 1.2
Synopsis: Simply Reactive! Declarative orchestration in Haskell with RDP.
Category: Reactive
Description:
  Reactive Demand Programming is an effectful, declarative paradigm
  for continuous orchestration of open systems. Sirea implements RDP
  in Haskell. This particular module is the `core` of Sirea, just
  the basic behaviors and implementation. Domain specific resources
  will be provided by external libraries.
  .
  RDP is similar to arrowized FRP, excepting how it manages effects
  and state. RDP behaviors can encapsulate access to resources and
  services, observing and influencing them through signals. State is
  modeled as an external service. RDP expressions cannot accumulate
  data over time.
  .
  RDP is effectful, but not imperative. RDP expressions support most
  of the reasoning and refactoring benefits of pure code. 

Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/Sirea
Package-Url: 
Copyright: (c) 2012 by David Barbour
License: BSD3
Stability: experimental
build-type: Simple

Library
  hs-Source-Dirs: src
  Extensions:
  Build-Depends: base>4.5
    ,parallel>3
    ,time

  Exposed-Modules:
    FRP.Sirea.Behavior
    FRP.Sirea.Signal
    FRP.Sirea.Link
    FRP.Sirea.Partition

    FRP.Sirea.Bdeep
    FRP.Sirea.Time

  ghc-options: -threaded -Wall -fno-warn-orphans 


