Name: sirea-filesystem
Version: 0.1
cabal-Version: >= 1.8
Synopsis: Simple view and manipulation of filesystem in Sirea.
Category: Reactivity
Description:
  This package allows developers to observe a files in a reactive 
  manner, and a few simplistic approaches to manipulation of files.
  The features here are very basic, most applicable to small files
  that can be loaded or saved all at once (as opposed to very large 
  files, streaming files, etc.).
  
  Files can offer a simple, persistent input model for Sirea apps,
  e.g. a viable alternative to console input is to manipulate a file
  that the application is watching. RDP's design is such that an app
  should not need to be restarted when control files change.

Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/Sirea
Package-Url: 
Copyright: (c) 2013 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple

Library
  hs-Source-Dirs: src
  Build-Depends: base (>= 4.5 && < 5)
    ,fsnotify
    ,system-filepath (>= 0.4.6)
    ,system-filei

    ,
    ,sirea-core (>= 0.1)

  Exposed-Modules:
    Sirea.System.Filesystem

  ghc-options: -Wall -fno-warn-orphans


