Name: sirea-filesystem
Version: 0.1
cabal-Version: >= 1.8
Synopsis: Simple view and manipulation of filesystem from Sirea.
Category: Sirea
Description:
  This package allows developers to observe a files in a reactive 
  manner, and a few simplistic approaches to manipulation of files.
  The features here are very basic, most applicable to small files
  that can be loaded or saved all at once (as opposed to very large 
  files, streaming files, etc.). 

Author: David Barbour
Maintainer: dmbarbour@gmail.com
Homepage: http://github.com/dmbarbour/Sirea
Package-Url: 
Copyright: (c) 2013 by David Barbour
License: BSD3
license-file: LICENSE.txt
Stability: experimental
build-type: Simple

Flag polling 
  Description: use the polling implementation for testing or compatibility
  Default: False

Library
  hs-Source-Dirs: src
  Build-Depends: base (>= 4.5 && < 5)
    ,sirea-core (>= 0.1)
    ,containers (>= 0.5)
    ,system-filepath (>= 0.4.7)
    ,system-fileio (>= 0.3.11)
    ,bytestring (>= 0.9)
    ,text (>= 0.11)

  Exposed-Modules:
    Sirea.Filesystem

  Other-Modules: 
    Sirea.Filesystem.Polling
    Sirea.Filesystem.Manager
    Sirea.Filesystem.OSManager
    Sirea.Filesystem.WorkerPool
    Sirea.Filesystem.KeyedSched

  Extensions: CPP
  ghc-options: -Wall -fno-warn-orphans

  if os(linux) && !flag(polling)
    CPP-Options: -DOS_Linux
    Other-Modules: Sirea.Filesystem.Linux
    Build-Depends: hinotify >= 0.3.5
  if os(windows) && !flag(polling)
    CPP-Options: -DOS_Windows
    Other-Modules: Sirea.Filesystem.Windows
    Build-Depends: Win32-notify >= 0.3
  if os(darwin) && !flag(polling)
    CPP-Options: -DOS_OSX
    Other-Modules: Sirea.Filesystem.OSX
    Build-Depends: hfsevents >= 0.1.3
  if flag(polling)
    CPP-Options: -DUSE_POLLING

